--- a/Data_Science-analise-de-series-temporais/Time-series.ipynb
+++ b/Data_Science-analise-de-series-temporais/Time-series.ipynb
@@ -314,7 +314,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fa814bbb3a0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f16431ac3d0>"
       ]
      },
      "execution_count": 12,
@@ -1976,16 +1976,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
-    "vendas_por_dia['dia_da_semana'] = vendas_por_dia['dia'].dt.day_name"
+    "vendas_por_dia['dia_da_semana'] = vendas_por_dia['dia'].dt.day_name()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, since pandas upgraded, I got this error: AttributeError: 'DatetimeProperties' object has no attribute 'weekday_name'\n",
+    "\n",
+    "I check the document and it seemed this property change to 'day_name' \n",
+    "\n",
+    "Series.dt.day_name is implemented as a method, not an attribute. As such you need to call it with ()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -2023,7 +2035,7 @@
        "      <td>50</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>&lt;bound method PandasDelegate._add_delegate_acc...</td>\n",
+       "      <td>Monday</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -2031,7 +2043,7 @@
        "      <td>48</td>\n",
        "      <td>-2.0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>&lt;bound method PandasDelegate._add_delegate_acc...</td>\n",
+       "      <td>Tuesday</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -2039,7 +2051,7 @@
        "      <td>56</td>\n",
        "      <td>8.0</td>\n",
        "      <td>10.0</td>\n",
-       "      <td>&lt;bound method PandasDelegate._add_delegate_acc...</td>\n",
+       "      <td>Wednesday</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -2047,7 +2059,7 @@
        "      <td>50</td>\n",
        "      <td>-6.0</td>\n",
        "      <td>-14.0</td>\n",
-       "      <td>&lt;bound method PandasDelegate._add_delegate_acc...</td>\n",
+       "      <td>Thursday</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -2055,7 +2067,7 @@
        "      <td>51</td>\n",
        "      <td>1.0</td>\n",
        "      <td>7.0</td>\n",
-       "      <td>&lt;bound method PandasDelegate._add_delegate_acc...</td>\n",
+       "      <td>Friday</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -2063,7 +2075,7 @@
        "      <td>18</td>\n",
        "      <td>-33.0</td>\n",
        "      <td>-34.0</td>\n",
-       "      <td>&lt;bound method PandasDelegate._add_delegate_acc...</td>\n",
+       "      <td>Saturday</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -2071,33 +2083,24 @@
        "      <td>20</td>\n",
        "      <td>2.0</td>\n",
        "      <td>35.0</td>\n",
-       "      <td>&lt;bound method PandasDelegate._add_delegate_acc...</td>\n",
+       "      <td>Sunday</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         dia  vendas  aumento  aceleracao  \\\n",
-       "0 2018-10-01      50      NaN         NaN   \n",
-       "1 2018-10-02      48     -2.0         NaN   \n",
-       "2 2018-10-03      56      8.0        10.0   \n",
-       "3 2018-10-04      50     -6.0       -14.0   \n",
-       "4 2018-10-05      51      1.0         7.0   \n",
-       "5 2018-10-06      18    -33.0       -34.0   \n",
-       "6 2018-10-07      20      2.0        35.0   \n",
-       "\n",
-       "                                       dia_da_semana  \n",
-       "0  <bound method PandasDelegate._add_delegate_acc...  \n",
-       "1  <bound method PandasDelegate._add_delegate_acc...  \n",
-       "2  <bound method PandasDelegate._add_delegate_acc...  \n",
-       "3  <bound method PandasDelegate._add_delegate_acc...  \n",
-       "4  <bound method PandasDelegate._add_delegate_acc...  \n",
-       "5  <bound method PandasDelegate._add_delegate_acc...  \n",
-       "6  <bound method PandasDelegate._add_delegate_acc...  "
+       "         dia  vendas  aumento  aceleracao dia_da_semana\n",
+       "0 2018-10-01      50      NaN         NaN        Monday\n",
+       "1 2018-10-02      48     -2.0         NaN       Tuesday\n",
+       "2 2018-10-03      56      8.0        10.0     Wednesday\n",
+       "3 2018-10-04      50     -6.0       -14.0      Thursday\n",
+       "4 2018-10-05      51      1.0         7.0        Friday\n",
+       "5 2018-10-06      18    -33.0       -34.0      Saturday\n",
+       "6 2018-10-07      20      2.0        35.0        Sunday"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2108,23 +2111,434 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([<bound method PandasDelegate._add_delegate_accessors.<locals>._create_delegator_method.<locals>.f of <pandas.core.indexes.accessors.DatetimeProperties object at 0x7fa814044490>>],\n",
-       "      dtype=object)"
+       "array(['Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday',\n",
+       "       'Sunday'], dtype=object)"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "vendas_por_dia['dia_da_semana'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dias_traduzidos = {\"Monday\": \"Segunda\",\n",
+    "    \"Tuesday\": \"Terca\",\n",
+    "    \"Wednesday\": \"Quarta\",\n",
+    "    \"Thursday\": \"Quinta\",\n",
+    "    \"Friday\": \"Sexta\",\n",
+    "    \"Saturday\": \"Sabado\",\n",
+    "    \"Sunday\": \"Domingo\"}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>dia</th>\n",
+       "      <th>vendas</th>\n",
+       "      <th>aumento</th>\n",
+       "      <th>aceleracao</th>\n",
+       "      <th>dia_da_semana</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2018-10-01</td>\n",
+       "      <td>50</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Segunda</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2018-10-02</td>\n",
+       "      <td>48</td>\n",
+       "      <td>-2.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Terca</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2018-10-03</td>\n",
+       "      <td>56</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>Quarta</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2018-10-04</td>\n",
+       "      <td>50</td>\n",
+       "      <td>-6.0</td>\n",
+       "      <td>-14.0</td>\n",
+       "      <td>Quinta</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2018-10-05</td>\n",
+       "      <td>51</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>Sexta</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         dia  vendas  aumento  aceleracao dia_da_semana\n",
+       "0 2018-10-01      50      NaN         NaN       Segunda\n",
+       "1 2018-10-02      48     -2.0         NaN         Terca\n",
+       "2 2018-10-03      56      8.0        10.0        Quarta\n",
+       "3 2018-10-04      50     -6.0       -14.0        Quinta\n",
+       "4 2018-10-05      51      1.0         7.0         Sexta"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vendas_por_dia['dia_da_semana'] = vendas_por_dia['dia_da_semana'].map(dias_traduzidos)\n",
+    "vendas_por_dia.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>dia</th>\n",
+       "      <th>vendas</th>\n",
+       "      <th>aumento</th>\n",
+       "      <th>aceleracao</th>\n",
+       "      <th>dia_da_semana</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2018-10-01</td>\n",
+       "      <td>50</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Segunda</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2018-10-02</td>\n",
+       "      <td>48</td>\n",
+       "      <td>-2.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Terca</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2018-10-03</td>\n",
+       "      <td>56</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>Quarta</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2018-10-04</td>\n",
+       "      <td>50</td>\n",
+       "      <td>-6.0</td>\n",
+       "      <td>-14.0</td>\n",
+       "      <td>Quinta</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2018-10-05</td>\n",
+       "      <td>51</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>Sexta</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2018-10-06</td>\n",
+       "      <td>18</td>\n",
+       "      <td>-33.0</td>\n",
+       "      <td>-34.0</td>\n",
+       "      <td>Sabado</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2018-10-07</td>\n",
+       "      <td>20</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>Domingo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2018-10-08</td>\n",
+       "      <td>50</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>Segunda</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2018-10-09</td>\n",
+       "      <td>53</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>-27.0</td>\n",
+       "      <td>Terca</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2018-10-10</td>\n",
+       "      <td>56</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Quarta</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>2018-10-11</td>\n",
+       "      <td>40</td>\n",
+       "      <td>-16.0</td>\n",
+       "      <td>-19.0</td>\n",
+       "      <td>Quinta</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>2018-10-12</td>\n",
+       "      <td>15</td>\n",
+       "      <td>-25.0</td>\n",
+       "      <td>-9.0</td>\n",
+       "      <td>Sexta</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>2018-10-13</td>\n",
+       "      <td>14</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>Sabado</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>2018-10-14</td>\n",
+       "      <td>17</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>Domingo</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          dia  vendas  aumento  aceleracao dia_da_semana\n",
+       "0  2018-10-01      50      NaN         NaN       Segunda\n",
+       "1  2018-10-02      48     -2.0         NaN         Terca\n",
+       "2  2018-10-03      56      8.0        10.0        Quarta\n",
+       "3  2018-10-04      50     -6.0       -14.0        Quinta\n",
+       "4  2018-10-05      51      1.0         7.0         Sexta\n",
+       "5  2018-10-06      18    -33.0       -34.0        Sabado\n",
+       "6  2018-10-07      20      2.0        35.0       Domingo\n",
+       "7  2018-10-08      50     30.0        28.0       Segunda\n",
+       "8  2018-10-09      53      3.0       -27.0         Terca\n",
+       "9  2018-10-10      56      3.0         0.0        Quarta\n",
+       "10 2018-10-11      40    -16.0       -19.0        Quinta\n",
+       "11 2018-10-12      15    -25.0        -9.0         Sexta\n",
+       "12 2018-10-13      14     -1.0        24.0        Sabado\n",
+       "13 2018-10-14      17      3.0         4.0       Domingo"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vendas_por_dia.head(14)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Agrupando os dias**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-76-274cec7648e5>:1: FutureWarning: Indexing with multiple keys (implicitly converted to a tuple of keys) will be deprecated, use a list instead.\n",
+      "  vendas_agrupadas = vendas_por_dia.groupby('dia_da_semana')['vendas', 'aumento', 'aceleracao'].mean(). round()\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>vendas</th>\n",
+       "      <th>aumento</th>\n",
+       "      <th>aceleracao</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>dia_da_semana</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Domingo</th>\n",
+       "      <td>19.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>31.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Quarta</th>\n",
+       "      <td>53.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Quinta</th>\n",
+       "      <td>51.0</td>\n",
+       "      <td>-2.0</td>\n",
+       "      <td>-3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Sabado</th>\n",
+       "      <td>16.0</td>\n",
+       "      <td>-28.0</td>\n",
+       "      <td>-20.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Segunda</th>\n",
+       "      <td>52.0</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>31.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Sexta</th>\n",
+       "      <td>45.0</td>\n",
+       "      <td>-7.0</td>\n",
+       "      <td>-5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Terca</th>\n",
+       "      <td>52.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>-34.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               vendas  aumento  aceleracao\n",
+       "dia_da_semana                             \n",
+       "Domingo          19.0      3.0        31.0\n",
+       "Quarta           53.0      1.0         2.0\n",
+       "Quinta           51.0     -2.0        -3.0\n",
+       "Sabado           16.0    -28.0       -20.0\n",
+       "Segunda          52.0     34.0        31.0\n",
+       "Sexta            45.0     -7.0        -5.0\n",
+       "Terca            52.0     -1.0       -34.0"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vendas_agrupadas = vendas_por_dia.groupby('dia_da_semana')['vendas', 'aumento', 'aceleracao'].mean(). round()\n",
+    "vendas_agrupadas"
    ]
   },
   {
