Fim curso Data Science análise de séries temporais

--- a/Data_Science-analise-de-series-temporais/Time-series.ipynb
+++ b/Data_Science-analise-de-series-temporais/Time-series.ipynb
@@ -3531,6 +3531,19 @@
    "source": [
     "plot_comparacao('dia', 'vendas', 'media_movel', 'media_movel_21', alucel, 'Comparando as médias móveis')"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Fim do curso"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
